k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: blackdevs

spec:
  replicas: 1
  revisionHistoryLimit: 100

  selector:
    matchLabels:
      app: pg-project

  strategy:
    type: Recreate

  template:
    metadata:
      # name: api-deployment
      labels:
        app: pg-project

    spec:
      containers:
        - name: pg-api
          image: juliocesarmidia/pg-project-api:latest

          ports:
            - containerPort: 40000
              name: api-port

          livenessProbe:
            httpGet:
              path: /api/v1/healthcheck
              port: 40000
            initialDelaySeconds: 10
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/v1/healthcheck
              port: 40000
            initialDelaySeconds: 10
            timeoutSeconds: 30

          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "500m"

      restartPolicy: Always
