k8s/fluentd-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: blackdevs
  labels:
    app: pg-project

spec:
  selector:
    matchLabels:
      app: pg-project

  template:
    metadata:
      labels:
        app: pg-project

    spec:
      containers:
      - name: fluentd
        image: quay.io/fluentd_elasticsearch/fluentd:v2.5.2

        ports:
          - containerPort: 24224
            name: fluentd-port

        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "128m"
            memory: "256Mi"

        volumeMounts:
          - name: varlog
            mountPath: /var/log

          - name: varlibdockercontainers
            mountPath: /var/lib/docker/containers
            readOnly: true

          - name: init-volume
            mountPath: /etc/fluent/fluent.conf
            subPath: init.yaml

      terminationGracePeriodSeconds: 30

      volumes:
        - name: varlog
          hostPath:
            path: /var/log

        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers

        - name: init-volume
          configMap:
            name: fluentd-data
