k8s/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: blackdevs

spec:
  type: ClusterIP

  selector:
    app: pg-project

  ports:
    - port: 80
      targetPort: api-port
      protocol: TCP
