k8s/fluentd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluentd-svc
  namespace: blackdevs

spec:
  type: ClusterIP

  selector:
    app: pg-project

  ports:
    - port: 24224
      targetPort: fluentd-port
      protocol: TCP
