k8s/fluentd.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd-deployment
  namespace: blackdevs

spec:
  replicas: 1
  revisionHistoryLimit: 100

  selector:
    matchLabels:
      app: pg-project-fluentd

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 3

  template:
    metadata:
      name: fluentd-deployment
      labels:
        app: pg-project-fluentd

    spec:
      containers:
        - name: fluentd
          image: quay.io/fluentd_elasticsearch/fluentd:v2.5.2
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 24224
              name: fluentd-port

          volumeMounts:
            - name: varlog
              mountPath: /var/log

            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true

            - name: init-volume
              mountPath: /etc/fluent/fluent.conf
              subPath: init.yaml

          resources:
            requests:
              memory: "128Mi"
              cpu: "256m"
            limits:
              memory: "128Mi"
              cpu: "256m"

      restartPolicy: Always

      volumes:
        - name: varlog
          hostPath:
            path: /var/log

        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers

        - name: init-volume
          configMap:
            name: fluentd-data

---

apiVersion: v1
kind: Service
metadata:
  name: fluentd-svc
  namespace: blackdevs

spec:
  type: ClusterIP

  selector:
    app: pg-project-fluentd

  ports:
    - port: 24224
      targetPort: fluentd-port
      protocol: TCP
