k8s/pg-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-svc
  namespace: blackdevs

spec:
  type: ClusterIP

  selector:
    app: pg-project

  ports:
    - port: 5432
      targetPort: pg-port
      protocol: TCP
