k8s/postgres.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg-statefulset
  namespace: default

spec:
  replicas: 1

  serviceName: postgres

  selector:
    matchLabels:
      app: pg-project-postgres

  template:
    metadata:
      labels:
        app: pg-project-postgres

    spec:
      containers:
        - name: postgres
          image: postgres:9.6-alpine
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5432
              name: pg-port

          volumeMounts:
            - name: init-volume
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.yaml

            - name: data-volume
              mountPath: /var/lib/postgresql/data

            # - name: pg-persistent-storage
            #   mountPath: /var/lib/postgresql/data

          resources:
            requests:
              memory: "128Mi"
              cpu: "256m"
            limits:
              memory: "128Mi"
              cpu: "256m"

      restartPolicy: Always

      volumes:
        - name: init-volume
          configMap:
            name: pg-data

        - name: data-volume
          emptyDir: {}

        # - name: pg-persistent-storage
        #   persistentVolumeClaim:
        #     claimName: pg-pv-claim

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default

spec:
  type: ClusterIP

  selector:
    app: pg-project-postgres

  ports:
    - port: 5432
      targetPort: pg-port
      protocol: TCP
