k8s/ingress-local-svc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: blackdevs

  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: api-svc
              servicePort: 80
